# colorReduction

./: CMakeLists.txt
imGui/: CMakeLists.txt
source/: application.cpp  application.hpp  main.cpp
src/: application.cpp  application.hpp  debug.hpp  vec4.hpp
src/windows/: GL_RGBA8.comp  computeShader.cpp  computeShader.hpp  conMatSSBO.hpp  image.hpp  imageConverter.hpp  imageViewer.hpp  invert.comp  mat.hpp  matProviderPopup.hpp  matProviderWindow.hpp  popupBase.hpp  sh.comp  shader.cpp  shader.hpp  shaderBase.hpp  testWindow.hpp  ui.hpp  window.hpp
